# google-takeout-utils

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cli.py  pyproject.toml  search_email.py
