[project]
name = "google-takeout-utils"
version = "0.1.0"
description = "CLI tools for searching, reading, and extracting emails from Google Takeout mbox exports"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []
authors = [
    {name = "Harald Schilly", email = "harald.schilly@gmail.com"},
]
keywords = ["google", "takeout", "mbox", "email", "search", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]

[project.urls]
Homepage = "https://github.com/haraldschilly/google-takeout-utils"
Repository = "https://github.com/haraldschilly/google-takeout-utils"

[project.scripts]
google-takeout-utils = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["cli.py", "search_email.py"]
